update all links; delete unnescessary code; add search.html;

--- a/browse-sneakers.html
+++ b/browse-sneakers.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
@@ -28,16 +27,15 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" id="mobileMenu"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
-                        <li class="nav-item ">
+                        <li class="nav-item">
                             <a class="nav-link current-link" href="browse-sneakers.html">Browse Sneakers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="how-we-clean.html">How We Clean</a>
                         </li>
-                        <li class="nav-item ">
+                        <li class="nav-item">
                             <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
                         </li>
                         <li class="nav-item">
@@ -47,10 +45,10 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -60,46 +58,17 @@
 
     <main class="main">
 
-        <section class="authenticity-container container">
+        <section class="container">
             <div class="row">
                 <div class="col-12 col-lg-7 col-xl-6 mx-auto">
                     <h1 class="authenticity-title">
-                        Privacy Policy
+                        Browse
                     </h1>
-
-                    <p class="authenticity-text text-center">
-                        Effective as of 9th of August 2019
-                    </p>
-                    <p class="authenticity-text">
-                        <span class="paragraph-privacy">1. GENERAL PROVISIONS</span>
-                        This document uses the same terminology and abbreviations as our Terms of Service document. This
-                        Privacy Policy governs the collection, use and storage of Information obtained from users
-                        through the use of our Site and Services.
-                        <span class="emptySpace"></span>
-                        The Information on users is divided into personally identifiable and non-personally identifiable
-                        Information depending on whether information can identify the user as a specific person.
-                    </p>
-                    <p class="authenticity-text">
-                        <span class="paragraph-privacy">2. COLLECTION AND USE OF PERSONALLY IDENTIFIABLE
-                            INFORMATION</span>
-                        In order to provide you with our Services we require some personal information. The information
-                        we collect is necessary to provide our Services, and we do not collect any information which is
-                        not strictly required by the nature of the Service. Personal Information which we may collect
-                        includes:
-                    </p>
-
-        </section>
-
-        <section class="action">
-            <h2 class="action-text">
-                Same Sneakers, Better Prices
-            </h2>
-            <a href="browse-sneakers.html" class="infinite-button action-link">Rent Now</a>
-            <img class="action-image" src="images/other/sneakers-privact-policy.png" alt="Just Do It">
+                </div>
+            </div>
         </section>
 
     </main>
-
 
     <footer class="footer">
         <div class="container">
