--- a/how-we-clean.html
+++ b/how-we-clean.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
@@ -31,13 +30,13 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
-                        <li class="nav-item ">
+                        <li class="nav-item">
                             <a class="nav-link" href="browse-sneakers.html">Browse Sneakers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link current-link" href="how-we-clean.html">How We Clean</a>
                         </li>
-                        <li class="nav-item ">
+                        <li class="nav-item">
                             <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
                         </li>
                         <li class="nav-item">
@@ -47,10 +46,10 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -87,7 +86,8 @@
                         not strictly required by the nature of the Service. Personal Information which we may collect
                         includes:
                     </p>
-
+                </div>
+            </div>
         </section>
 
         <section class="action">
@@ -99,7 +99,6 @@
         </section>
 
     </main>
-
 
     <footer class="footer">
         <div class="container">
