--- a/login.html
+++ b/login.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
@@ -28,7 +27,6 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" id="mobileMenu"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
                         <li class="nav-item">
@@ -50,7 +48,7 @@
                     <a class="nav-text" href="#">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -61,187 +59,9 @@
     <main class="main">
 
 
-        <section class="rent-banner">
-            <img src="images/rent/rent-left.png" alt="" class="rent-image rent-image-left">
-            <div class="rent-text-container">
-                <h2 class="infinite-title">Unlimited For <span class="roboto">&#36;249</span></h2>
-                <p class="infinite-text rent-middle-text roboto">
-                    Rent Any Pair Of Sneakers in Your Size For Free
-                </p>
-                <a href="browse-sneakers.html" class="infinite-button rent-banner-button">Try Now</a>
-            </div>
-            <img src="images/rent/rent-right.png" alt="" class="rent-image rent-image-right">
-        </section>
-
-            <section class="container work-scheme">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="infinite-header text-center mb-4">How it works</h2>
-                    </div>
-                    <div class="col-md-12 col-lg-4 work-scheme-item">
-                        <h4 class="infinite-header-small mb-3 text-center">Choose your way to rent</h4>
-                        <p class="infinite-text text-grey">
-                            We offer one-time and unlimited rentals. Our rentals last
-                            either 4 or 8 days. Book rentals days or months in advance
-                            to suit all your sneaker needs.
-                        </p>
-                    </div>
-                    <div class="col-md-12 col-lg-4 work-scheme-item">
-                        <h4 class="infinite-header-small mb-3 text-center">We ship. You enjoy</h4>
-                        <p class="infinite-text text-grey">
-                            Choose the sneakers you want to rent and complete checkout.
-                            We pack and ship the sneakers to you. Your order will arrive
-                            at your door on your rental start date. Enjoy the sneakers for
-                            the length of your rental.
-                        </p>
-                    </div>
-                    <div class="col-md-12 col-lg-4 work-scheme-item">
-                        <h4 class="infinite-header-small mb-3 text-center">Repeat</h4>
-                        <p class="infinite-text text-grey">
-                            Simply return sneakers to us on the due date using the Free return
-                            label provided in the return kit and submit another order.
-                        </p>
-                    </div>
-                </div>
-            </section>
-
-        <section class="container rent-ways">
-            <h3 class="infinite-header grid-title">
-                two ways to rent
-            </h3>
-
-            <div class="table-container">
-                <table class="rent-table">
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th class="table-header-text">
-                                One-Time Rentals </th>
-                            <th class="table-header-text">
-                                Unlimited Rentals </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="table-dark-td">Perfect For</td>
-                            <td>Events</td>
-                            <td>Sneakerheads</td>
-                        </tr>
-                        <tr>
-                            <td class="table-dark-td">Pairs At Home</td>
-                            <td>One</td>
-                            <td>One</td>
-                        </tr>
-                        <tr>
-                            <td class="table-dark-td">Swaps</td>
-                            <td>None</td>
-                            <td>Four A Month</td>
-                        </tr>
-                        <tr>
-                            <td class="table-dark-td">Selection</td>
-                            <td>Restricted</td>
-                            <td>Unrestricted</td>
-                        </tr>
-                        <tr>
-                            <td class="table-dark-td">Pricing</td>
-                            <td>
-                                <p class="text-dark-medium">Starting At &#36;30/Rental</p>
-                                <a href="browse-sneakers.html"
-                                    class="infinite-button table-button button-white table-button-light">Browse
-                                    Sneakers</a>
-                            </td>
-                            <td class=" ">
-                                <p class="text-dark-medium">&#36;249/Month</p>
-                                <a href="ways-to-rent.html" class="infinite-button table-button">Try Now</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-
-        <section class="container rent-perks">
-            <h3 class="infinite-header grid-title">
-                Perks of unlimited
-            </h3>
-            <img class="infinite-image rent-perks-image" src="images/rent/sneakers-rent-perks.png" alt="sneakers">
-            <ul class="regular-list text-capitalize rent-list">
-                <li class="list-item">Rent any pair of sneakers for free</li>
-                <li class="list-item">Rent sneaker on rotation</li>
-                <li class="list-item">free shipping</li>
-                <li class="list-item">free insurance</li>
-                <li class="list-item"> free cleaning</li>
-            </ul>
-        </section>
-
-        <section class="container rent-exclusives">
-            <h3 class="infinite-header">
-                Unlimited Exclusives
-            </h3>
-            <div class="col-12 releases-container">
-                <div class="releases-item">
-                    <a href="#" class="releases-item-link">
-                        <img class="releases-image" src="images/releases/releases-7.png" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">&#36;330 Value</p>
-                        <p class="releases-cost">&#36;130</p>
-                    </a>
-                </div>
-                <div class="releases-item">
-                    <a href="#" class="releases-item-link">
-                        <img class="releases-image" src="images/releases/releases-8.png" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">&#36;330 Value</p>
-                        <p class="releases-cost">&#36;130</p>
-                    </a>
-                </div>
-                <div class="releases-item">
-                    <a href="#" class="releases-item-link">
-                        <img class="releases-image" src="images/releases/releases-9.png" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">&#36;330 Value</p>
-                        <p class="releases-cost">&#36;130</p>
-                    </a>
-                </div>
-                <div class="releases-item">
-                    <a href="#" class="releases-item-link">
-                        <img class="releases-image" src="images/releases/releases-10.png" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">&#36;330 Value</p>
-                        <p class="releases-cost">&#36;130</p>
-                    </a>
-                </div>
-                <div class="releases-item">
-                    <a href="#" class="releases-item-link">
-                        <img class="releases-image" src="images/releases/releases-11.png" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">&#36;330 Value</p>
-                        <p class="releases-cost">&#36;130</p>
-                    </a>
-                </div>
-                <div class="releases-item">
-                    <a href="#" class="releases-item-link">
-                        <img class="releases-image" src="images/releases/releases-12.png" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">&#36;330 Value</p>
-                        <p class="releases-cost">&#36;130</p>
-                    </a>
-                </div>
-            </div>
-            <a href="browse-sneakers.html" class="infinite-button action-link">Unlimited Rentals</a>
-        </section>
-
-
-        <section class="rent-action">
-            <h2 class="infinite-title">
-                Afraid Of Commitment
-                <span class="infinite-text rent-middle-text roboto">Start With A One-Time Rental</span>
-            </h2>
-            <a href="browse-sneakers.html" class="infinite-button action-link">Browse Sneakers</a>
-        </section>
+      
 
     </main>
-
 
     <footer class="footer">
         <div class="container">
