--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
@@ -28,7 +27,6 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" id="mobileMenu"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
                         <li class="nav-item ">
@@ -47,10 +45,10 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -70,6 +68,7 @@
                     <p class="authenticity-text text-center">
                         Effective as of 9th of August 2019
                     </p>
+
                     <p class="authenticity-text">
                         <span class="paragraph-privacy">1. GENERAL PROVISIONS</span>
                         This document uses the same terminology and abbreviations as our Terms of Service document. This
@@ -79,6 +78,7 @@
                         The Information on users is divided into personally identifiable and non-personally identifiable
                         Information depending on whether information can identify the user as a specific person.
                     </p>
+
                     <p class="authenticity-text">
                         <span class="paragraph-privacy">2. COLLECTION AND USE OF PERSONALLY IDENTIFIABLE
                             INFORMATION</span>
@@ -87,6 +87,7 @@
                         not strictly required by the nature of the Service. Personal Information which we may collect
                         includes:
                     </p>
+
                     <ul class="regular-list authenticity-text">
                         <li class="list-item">first and last name,</li>
                         <li class="list-item">date of birth</li>
@@ -96,9 +97,11 @@
                         <li class="list-item">physical address, and</li>
                         <li class="list-item">shoe size.</li>
                     </ul>
+
                     <p class="authenticity-text">
                         We use personally identifiable Information only for the following purposes:
                     </p>
+
                     <ul class="regular-list authenticity-text">
                         <li class="list-item">creating and managing user accounts,</li>
                         <li class="list-item">verifying user’s identity,</li>
@@ -240,12 +243,14 @@
                         <a href="http://optout.networkadvertising.org/#/" target="_blank" class="regular-link"
                             rel="noopener noreferrer">networkadvertising.org</a>.
                     </p>
+
                     <p class="authenticity-text">
                         <span class="paragraph-privacy">6. CHANGES TO THE PRIVACY POLICY</span>
                         We reserve the right to change our Privacy Policy at any time. The current version of Privacy
                         Policy is available on the Site, indicating the effective date. You are encouraged to
                         periodically check our Privacy Policy.
                     </p>
+
                     <p class="authenticity-text">
                         <span class="paragraph-privacy">7. CONTACT INFORMATION</span>
                         If you have any questions regarding our Privacy Policy and how the information is handled, or
@@ -253,7 +258,8 @@
                         <a href="mailto:gimmethenick@gmail.com" target="_blank" class="regular-link"
                             rel="noopener noreferrer">ereburg@infiniteselection.com</a>.
                     </p>
-
+                </div>
+            </div>
         </section>
 
         <section class="action">
@@ -265,7 +271,6 @@
         </section>
 
     </main>
-
 
     <footer class="footer">
         <div class="container">
