--- a/search.html
+++ b/search.html
@@ -17,6 +17,7 @@
 
 <body>
 
+
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
@@ -37,7 +38,7 @@
                             <a class="nav-link" href="how-we-clean.html">How We Clean</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
+                            <a class="nav-link current-link" href="ways-to-rent.html">Ways to Rent</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="authenticity-guarantee.html">Authenticity
@@ -60,7 +61,7 @@
     <main class="main">
 
 
-
+        
     </main>
 
     <footer class="footer">
