--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
@@ -28,7 +27,6 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" id="mobileMenu"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
                         <li class="nav-item ">
@@ -47,10 +45,10 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -70,7 +68,8 @@
                     <p class="authenticity-text text-center">
                         Effective as of 9th of August 2019
                     </p>
-                    <p class="authenticity-text  ">
+
+                    <p class="authenticity-text">
                         Infinite Selection Terms of Service Agreement (Terms) explains the terms and conditions under
                         which you are able to use the website (Site) and services (Services) provided by Infinite
                         Selection (we/us). PLEASE READ THESE TERMS CAREFULLY AND KEEP A COPY FOR REFERENCE. THESE TERMS
@@ -88,7 +87,8 @@
                         agreement concluded between you and Infinite Selection
 
                     </p>
-                    <p class="authenticity-text  ">
+
+                    <p class="authenticity-text">
                         <span class="paragraph-privacy">1. General Terms</span>
                         <span class="paragraph-privacy">1.1 Scope of the Services</span>
 
@@ -193,8 +193,7 @@
                         </li>
                     </ul>
 
-
-                    <p class="authenticity-text  ">
+                    <p class="authenticity-text">
                         Infinite Selection Terms of Service Agreement (Terms) explains the terms and conditions under
                         which you are able to use the website (Site) and services (Services) provided by Infinite
                         Selection (we/us). PLEASE READ THESE TERMS CAREFULLY AND KEEP A COPY FOR REFERENCE. THESE TERMS
@@ -212,7 +211,8 @@
                         agreement concluded between you and Infinite Selection
 
                     </p>
-                    <p class="authenticity-text  ">
+
+                    <p class="authenticity-text">
                         <span class="paragraph-privacy">2. Rental and purchase terms</span>
                         <span class="paragraph-privacy">2.1 General terms</span>
 
@@ -274,7 +274,8 @@
                             amount of the rental fee of your order reduced by the cancelation fee in the amount of $10.
                         </li>
                     </ol>
-                    <p class="authenticity-text  ">
+
+                    <p class="authenticity-text">
                         <span class="paragraph-privacy">2.4 Delivery</span>
 
                         All sneakers listed on the Site are used, pre – owned collectable sneakers. Sign of use or
@@ -365,7 +366,7 @@
                         in the amount of full rental fee. Return shipment costs shall not be reimbursed.
                     </p>
 
-                    <p class="authenticity-text  ">
+                    <p class="authenticity-text">
                         <span class="paragraph-privacy">2.7 Purchase</span>
 
                         Some Sneakers on the Site may be available for purchase. All Sneakers condition is declared as
@@ -504,7 +505,7 @@
                         information to the Site’s Copyright Agent:
                     </p>
 
-                    <ol class="regular-list authenticity-text  ">
+                    <ol class="regular-list authenticity-text">
                         <li class="list-item">
                             An electronic or physical signature of the person authorized to act on behalf of the owner
                             of the copyright or other intellectual property interest;
@@ -530,14 +531,13 @@
                         </li>
                     </ol>
 
-                    <p class="authenticity-text  ">
+                    <p class="authenticity-text">
                         Our copyright agent can be reached as follows: <br>
                         Email:<a href="mailto:gimmethenick@gmail.com"
                             class="regular-link">ereburg@infiniteselection.com</a>
                     </p>
 
-
-                    <p class="authenticity-text  ">
+                    <p class="authenticity-text">
                         <span class="paragraph-privacy">4. Third Party Services and content</span>
 
                         Use of our Services is conditioned by the use of SMS order updates. If you cannot or do not want
@@ -687,6 +687,8 @@
                         third-party without obtaining prior written consent, except to the successors in the event of
                         merger, sale, or liquidation of the Party.
                     </p>
+                </div>
+            </div>
         </section>
 
         <section class="action">
@@ -698,7 +700,6 @@
         </section>
 
     </main>
-
 
     <footer class="footer">
         <div class="container">
