--- a/ways-to-rent.html
+++ b/ways-to-rent.html
@@ -47,10 +47,10 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -60,9 +60,8 @@
 
     <main class="main">
 
-
         <section class="rent-banner">
-            <img src="images/rent/rent-left.png" alt="" class="rent-image rent-image-left">
+            <img src="images/rent/rent-left.png" alt="Rent Image" class="rent-image rent-image-left">
             <div class="rent-text-container">
                 <h2 class="infinite-title">Unlimited For <span class="roboto">&#36;249</span></h2>
                 <p class="infinite-text rent-middle-text roboto">
@@ -70,40 +69,40 @@
                 </p>
                 <a href="browse-sneakers.html" class="infinite-button rent-banner-button">Try Now</a>
             </div>
-            <img src="images/rent/rent-right.png" alt="" class="rent-image rent-image-right">
+            <img src="images/rent/rent-right.png" alt="Rent Image" class="rent-image rent-image-right">
         </section>
 
-            <section class="container work-scheme">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="infinite-header text-center mb-4">How it works</h2>
-                    </div>
-                    <div class="col-md-12 col-lg-4 work-scheme-item">
-                        <h4 class="infinite-header-small mb-3 text-center">Choose your way to rent</h4>
-                        <p class="infinite-text text-grey">
-                            We offer one-time and unlimited rentals. Our rentals last
-                            either 4 or 8 days. Book rentals days or months in advance
-                            to suit all your sneaker needs.
-                        </p>
-                    </div>
-                    <div class="col-md-12 col-lg-4 work-scheme-item">
-                        <h4 class="infinite-header-small mb-3 text-center">We ship. You enjoy</h4>
-                        <p class="infinite-text text-grey">
-                            Choose the sneakers you want to rent and complete checkout.
-                            We pack and ship the sneakers to you. Your order will arrive
-                            at your door on your rental start date. Enjoy the sneakers for
-                            the length of your rental.
-                        </p>
-                    </div>
-                    <div class="col-md-12 col-lg-4 work-scheme-item">
-                        <h4 class="infinite-header-small mb-3 text-center">Repeat</h4>
-                        <p class="infinite-text text-grey">
-                            Simply return sneakers to us on the due date using the Free return
-                            label provided in the return kit and submit another order.
-                        </p>
-                    </div>
+        <section class="container work-scheme">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="infinite-header text-center mb-4">How it works</h2>
                 </div>
-            </section>
+                <div class="col-md-12 col-lg-4 work-scheme-item">
+                    <h4 class="infinite-header-small mb-3 text-center">Choose your way to rent</h4>
+                    <p class="infinite-text text-grey">
+                        We offer one-time and unlimited rentals. Our rentals last
+                        either 4 or 8 days. Book rentals days or months in advance
+                        to suit all your sneaker needs.
+                    </p>
+                </div>
+                <div class="col-md-12 col-lg-4 work-scheme-item">
+                    <h4 class="infinite-header-small mb-3 text-center">We ship. You enjoy</h4>
+                    <p class="infinite-text text-grey">
+                        Choose the sneakers you want to rent and complete checkout.
+                        We pack and ship the sneakers to you. Your order will arrive
+                        at your door on your rental start date. Enjoy the sneakers for
+                        the length of your rental.
+                    </p>
+                </div>
+                <div class="col-md-12 col-lg-4 work-scheme-item">
+                    <h4 class="infinite-header-small mb-3 text-center">Repeat</h4>
+                    <p class="infinite-text text-grey">
+                        Simply return sneakers to us on the due date using the Free return
+                        label provided in the return kit and submit another order.
+                    </p>
+                </div>
+            </div>
+        </section>
 
         <section class="container rent-ways">
             <h3 class="infinite-header grid-title">
@@ -152,7 +151,7 @@
                             </td>
                             <td class=" ">
                                 <p class="text-dark-medium">&#36;249/Month</p>
-                                <a href="ways-to-rent.html" class="infinite-button table-button">Try Now</a>
+                                <a href="browse-sneakers.html" class="infinite-button table-button">Try Now</a>
                             </td>
                         </tr>
                     </tbody>
@@ -180,7 +179,7 @@
             </h3>
             <div class="col-12 releases-container">
                 <div class="releases-item">
-                    <a href="#" class="releases-item-link">
+                    <a href="example.html" class="releases-item-link">
                         <img class="releases-image" src="images/releases/releases-7.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -188,7 +187,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="#" class="releases-item-link">
+                    <a href="example.html" class="releases-item-link">
                         <img class="releases-image" src="images/releases/releases-8.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -196,7 +195,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="#" class="releases-item-link">
+                    <a href="example.html" class="releases-item-link">
                         <img class="releases-image" src="images/releases/releases-9.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -204,7 +203,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="#" class="releases-item-link">
+                    <a href="example.html" class="releases-item-link">
                         <img class="releases-image" src="images/releases/releases-10.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -212,7 +211,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="#" class="releases-item-link">
+                    <a href="example.html" class="releases-item-link">
                         <img class="releases-image" src="images/releases/releases-11.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -220,7 +219,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="#" class="releases-item-link">
+                    <a href="example.html" class="releases-item-link">
                         <img class="releases-image" src="images/releases/releases-12.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -231,7 +230,6 @@
             <a href="browse-sneakers.html" class="infinite-button action-link">Unlimited Rentals</a>
         </section>
 
-
         <section class="rent-action">
             <h2 class="infinite-title">
                 Afraid Of Commitment
@@ -241,7 +239,6 @@
         </section>
 
     </main>
-
 
     <footer class="footer">
         <div class="container">
