--- a/authenticity-guarantee.html
+++ b/authenticity-guarantee.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
@@ -28,7 +27,6 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" id="mobileMenu"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
                         <li class="nav-item ">
@@ -37,7 +35,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="how-we-clean.html">How We Clean</a>
                         </li>
-                        <li class="nav-item ">
+                        <li class="nav-item">
                             <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
                         </li>
                         <li class="nav-item">
@@ -47,10 +45,10 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -103,7 +101,6 @@
         </section>
 
     </main>
-
 
     <footer class="footer">
         <div class="container">
