--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
@@ -49,7 +48,7 @@
                     <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="browse-sneakers.html" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -339,7 +338,6 @@
         </section>
 
     </main>
-
 
     <footer class="footer">
         <div class="container">
