--- a/how-we-clean.html
+++ b/how-we-clean.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="col-12 col-lg-7 col-xl-6 mx-auto">
                     <h1 class="authenticity-title">
-                        Privacy Policy
+                        How We clean
                     </h1>
 
                     <p class="authenticity-text text-center">
