--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </a>
                     </div>
                     <div class="releases-item">
-                        <a href="#" class="releases-item-link">
+                        <a href="example.html" class="releases-item-link">
                             <img class="releases-image" src="images/releases/releases-4.jpg" alt="sneakers">
                             <p class="releases-title">Adidas Yeezy 500</p>
                             <p class="releases-value">&#36;330 Value</p>
