--- a/ways-to-rent.html
+++ b/ways-to-rent.html
@@ -72,35 +72,31 @@
             <img src="images/rent/rent-right.png" alt="Rent Image" class="rent-image rent-image-right">
         </section>
 
-        <section class="container work-scheme">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="infinite-header text-center mb-4">How it works</h2>
-                </div>
-                <div class="col-md-12 col-lg-4 work-scheme-item">
-                    <h4 class="infinite-header-small mb-3 text-center">Choose your way to rent</h4>
-                    <p class="infinite-text text-grey">
-                        We offer one-time and unlimited rentals. Our rentals last
-                        either 4 or 8 days. Book rentals days or months in advance
-                        to suit all your sneaker needs.
-                    </p>
-                </div>
-                <div class="col-md-12 col-lg-4 work-scheme-item">
-                    <h4 class="infinite-header-small mb-3 text-center">We ship. You enjoy</h4>
-                    <p class="infinite-text text-grey">
-                        Choose the sneakers you want to rent and complete checkout.
-                        We pack and ship the sneakers to you. Your order will arrive
-                        at your door on your rental start date. Enjoy the sneakers for
-                        the length of your rental.
-                    </p>
-                </div>
-                <div class="col-md-12 col-lg-4 work-scheme-item">
-                    <h4 class="infinite-header-small mb-3 text-center">Repeat</h4>
-                    <p class="infinite-text text-grey">
-                        Simply return sneakers to us on the due date using the Free return
-                        label provided in the return kit and submit another order.
-                    </p>
-                </div>
+        <section class="container rent-works">
+            <h2 class="infinite-header text-center works-title">How it works</h2>
+            <div class="rent-works-item">
+                <h4 class="infinite-header-small works-header text-center ">Choose your way to rent</h4>
+                <p class="infinite-text text-grey mb-0">
+                    Browse our growing collection of sneakers and pick the pair that is perfect for what you need. Our
+                    rentals last either 4 or 8 days. Book rentals days or months in advance to suit all your sneaker
+                    needs.
+                </p>
+            </div>
+            <div class="rent-works-item">
+                <h4 class="infinite-header-small works-header text-center">We ship. You enjoy</h4>
+                <p class="infinite-text text-grey mb-0">
+                    Choose the sneakers you want to rent and complete checkout.
+                    We pack and ship the sneakers to you. Your order will arrive
+                    at your door on your rental start date. Enjoy the sneakers for
+                    the length of your rental.
+                </p>
+            </div>
+            <div class="rent-works-item">
+                <h4 class="infinite-header-small works-header text-center">Repeat</h4>
+                <p class="infinite-text text-grey mb-0">
+                    Simply return the sneakers to us at a USPS on your rental end date (before 12 p.m.) using the
+                    provided pre-paid return label. Then, order your next pair!
+                </p>
             </div>
         </section>
 
